--- a/hoshino/modules/priconne/gacha/config.json
+++ b/hoshino/modules/priconne/gacha/config.json
@@ -3,7 +3,7 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["镜华(万圣节)","贪吃佩可(夏日)","凯留(夏日)"],
+        "up": ["镜华(万圣节)","初音(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -56,7 +56,7 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["贪吃佩可(夏日)","凯留(夏日)"],
+        "up": ["初音(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
