--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["初音(夏日)","咲恋(夏日)","铃奈(夏日)"],
+        "up": ["初音(夏日)","铃(游骑兵)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -12,7 +12,7 @@
             "亚里莎", "空花(大江户)", "妮诺(大江户)","七七香(夏日)",
             "克萝依", "碧(插班生)", "美美(万圣节)", "露娜","琪爱儿",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "安", "古蕾娅",
-            "铃(游骑兵)", "真阳(游骑兵)", "璃乃(奇境)", "祈梨", "优妮"
+            "真阳(游骑兵)", "璃乃(奇境)", "祈梨", "优妮"
         ],
         "other_normal_star3": [],
         "star2": [
@@ -30,7 +30,7 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["咲恋(夏日)","铃奈(夏日)"],
+        "up": ["铃(游骑兵)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -67,7 +67,7 @@
             "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮", "琪爱儿",
             "铃(游骑兵)", "真阳(游骑兵)", "璃乃(奇境)", "祈梨"
         ],
-        "other_normal_star3": ["璃乃(奇境)"],
+        "other_normal_star3": [],
         "star2": [
             "茉莉", "茜里", "宫子", "雪", "七七香", "美里",
             "铃奈", "香织", "美美", "绫音", "铃", "惠理子",
