--- a/config.json
+++ b/config.json
@@ -3,14 +3,14 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["初音(夏日)","铃(游骑兵)"],
+        "up": ["克萝依", "碧(插班生)","铃(游骑兵)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
             "咲恋", "望", "妮诺", "秋乃", "镜华", "智", "真琴",
             "伊莉亚", "纯", "静流", "莫妮卡", "流夏", "吉塔",
             "亚里莎", "空花(大江户)", "妮诺(大江户)","七七香(夏日)",
-            "克萝依", "碧(插班生)", "美美(万圣节)", "露娜","琪爱儿",
+             "美美(万圣节)", "露娜","琪爱儿",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "安", "古蕾娅",
             "真阳(游骑兵)", "璃乃(奇境)", "祈梨", "优妮"
         ],
@@ -56,14 +56,14 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["初音(夏日)"],
+        "up": ["克萝依", "碧(插班生)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
             "咲恋", "望", "妮诺", "秋乃", "镜华", "智", "真琴",
             "伊莉亚", "纯", "静流", "莫妮卡", "流夏", "吉塔",
             "亚里莎", "安", "古蕾娅", "空花(大江户)", "妮诺(大江户)",
-            "克萝依", "碧(插班生)", "美美(万圣节)", "露娜","七七香(夏日)",
+             "美美(万圣节)", "露娜","七七香(夏日)",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮", "琪爱儿",
             "铃(游骑兵)", "真阳(游骑兵)", "璃乃(奇境)", "祈梨"
         ],
@@ -96,7 +96,7 @@
             "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮", "琪爱儿"
         ],
         "star2": [
-            "茉莉", "茜里", "宫子", "雪", "铃",
+            "茜里", "宫子", "雪", "铃",
             "铃奈", "香织", "美美", "绫音", "惠理子",
             "真阳", "栞", "千歌", "空花", "珠希", "美冬",
             "深月", "美里", "纺希"
