--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
         "up_prob": 14,
         "s3_prob": 50,
         "s2_prob": 180,
-        "up": ["铃(游骑兵)","纯(夏日)"],
+        "up": ["真琴(夏日)","真步(夏日)","纯(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -12,7 +12,7 @@
             "亚里莎", "空花(大江户)", "妮诺(大江户)","七七香(夏日)",
              "美美(万圣节)", "露娜","琪爱儿","克萝依", "碧(插班生)",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "安", "古蕾娅",
-            "真阳(游骑兵)", "璃乃(奇境)", "祈梨", "优妮"
+            "真阳(游骑兵)", "璃乃(奇境)", "祈梨", "优妮","铃(游骑兵)"
         ],
         "other_normal_star3": [],
         "star2": [
@@ -30,14 +30,14 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["铃(游骑兵)"],
+        "up": ["真琴(夏日)","真步(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
             "咲恋", "望", "妮诺", "秋乃", "镜华", "智", "真琴",
             "伊莉亚", "纯", "静流", "莫妮卡", "流夏", "吉塔",
             "亚里莎", "空花(大江户)", "妮诺(大江户)", "安", "古蕾娅",
-            "克萝依", "碧(插班生)", "美美(万圣节)", "露娜",
+            "克萝依", "碧(插班生)", "美美(万圣节)", "露娜","铃(游骑兵)",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮","琪爱儿"
         ],
         "other_normal_star3": [],
@@ -83,7 +83,7 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["贪吃佩可(夏日)"],
+        "up": ["铃莓(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "璃乃", "镜华", "伊绪",
