--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "MIX": {
-        "up_prob": 14,
-        "s3_prob": 50,
+        "up_prob": 7,
+        "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["真琴(夏日)","真步(夏日)","纯(夏日)"],
+        "up": [ "真阳(游骑兵)","珠希(夏日)","铃莓(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -12,7 +12,7 @@
             "亚里莎", "空花(大江户)", "妮诺(大江户)","七七香(夏日)",
              "美美(万圣节)", "露娜","琪爱儿","克萝依", "碧(插班生)",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "安", "古蕾娅",
-            "真阳(游骑兵)", "璃乃(奇境)", "祈梨", "优妮","铃(游骑兵)"
+             "璃乃(奇境)", "祈梨", "优妮","铃(游骑兵)","纯(夏日)"
         ],
         "other_normal_star3": [],
         "star2": [
@@ -30,7 +30,7 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["真琴(夏日)","真步(夏日)"],
+        "up": ["真阳(游骑兵)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -53,10 +53,10 @@
         ]
     },
     "JP": {
-        "up_prob": 14,
-        "s3_prob": 50,
+        "up_prob": 7,
+        "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["纯(夏日)"],
+        "up": ["珠希(夏日)","铃莓(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -65,7 +65,7 @@
             "亚里莎", "安", "古蕾娅", "空花(大江户)", "妮诺(大江户)",
              "美美(万圣节)", "露娜","七七香(夏日)","克萝依", "碧(插班生)",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮", "琪爱儿",
-            "铃(游骑兵)", "真阳(游骑兵)", "璃乃(奇境)", "祈梨"
+            "铃(游骑兵)", "真阳(游骑兵)", "璃乃(奇境)", "祈梨","纯(夏日)"
         ],
         "other_normal_star3": [],
         "star2": [
