--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "MIX": {
-        "up_prob": 7,
-        "s3_prob": 25,
+        "up_prob": 14,
+        "s3_prob": 50,
         "s2_prob": 180,
-        "up": [ "真阳(游骑兵)","珠希(夏日)","铃莓(夏日)"],
+        "up": [ "拉比林斯达","可可萝(公主)","凯留(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -11,7 +11,7 @@
             "伊莉亚", "纯", "静流", "莫妮卡", "流夏", "吉塔",
             "亚里莎", "空花(大江户)", "妮诺(大江户)","七七香(夏日)",
              "美美(万圣节)", "露娜","琪爱儿","克萝依", "碧(插班生)",
-            "伊莉亚(圣诞节)", "霞(魔法少女)", "安", "古蕾娅",
+            "伊莉亚(圣诞节)", "霞(魔法少女)", "安", "古蕾娅","真阳(游骑兵)",
              "璃乃(奇境)", "祈梨", "优妮","铃(游骑兵)","纯(夏日)"
         ],
         "other_normal_star3": [],
@@ -28,9 +28,9 @@
     },
     "TW": {
         "up_prob": 7,
-        "s3_prob": 25,
+        "s3_prob": 50,
         "s2_prob": 180,
-        "up": ["真阳(游骑兵)"],
+        "up": ["可可萝(公主)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
@@ -38,7 +38,7 @@
             "伊莉亚", "纯", "静流", "莫妮卡", "流夏", "吉塔",
             "亚里莎", "空花(大江户)", "妮诺(大江户)", "安", "古蕾娅",
             "克萝依", "碧(插班生)", "美美(万圣节)", "露娜","铃(游骑兵)",
-            "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮","琪爱儿"
+            "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮","琪爱儿","真阳(游骑兵)"
         ],
         "other_normal_star3": [],
         "star2": [
@@ -54,9 +54,9 @@
     },
     "JP": {
         "up_prob": 7,
-        "s3_prob": 25,
+        "s3_prob": 50,
         "s2_prob": 180,
-        "up": ["珠希(夏日)","铃莓(夏日)"],
+        "up": ["拉比林斯达"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
