--- a/config.json
+++ b/config.json
@@ -3,16 +3,16 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": [ "璃乃(奇境)","茜里(天使)","凯留(夏日)"],
+        "up": ["镜华(万圣节)", "美美(万圣节)", "空花(大江户)", "妮诺(大江户)", "珠希(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
             "咲恋", "望", "妮诺", "秋乃", "镜华", "智", "真琴",
             "伊莉亚", "纯", "静流", "莫妮卡", "流夏", "吉塔",
-            "亚里莎", "空花(大江户)", "妮诺(大江户)","七七香(夏日)",
-             "美美(万圣节)", "露娜","琪爱儿","克萝依", "碧(插班生)",
-            "伊莉亚(圣诞节)", "霞(魔法少女)", "安", "古蕾娅","真阳(游骑兵)",
-              "祈梨", "优妮","铃(游骑兵)","纯(夏日)"
+            "亚里莎", "空花(大江户)", "妮诺(大江户)", "七七香(夏日)",
+            "美美(万圣节)", "露娜", "琪爱儿", "克萝依", "碧(插班生)",
+            "伊莉亚(圣诞节)", "霞(魔法少女)", "安", "古蕾娅", "真阳(游骑兵)",
+            "祈梨", "优妮", "铃(游骑兵)", "纯(夏日)"
         ],
         "other_normal_star3": [],
         "star2": [
@@ -30,15 +30,15 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["璃乃(奇境)"],
+        "up": ["空花(大江户)", "妮诺(大江户)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
             "咲恋", "望", "妮诺", "秋乃", "镜华", "智", "真琴",
             "伊莉亚", "纯", "静流", "莫妮卡", "流夏", "吉塔",
             "亚里莎", "空花(大江户)", "妮诺(大江户)", "安", "古蕾娅",
-            "克萝依", "碧(插班生)", "美美(万圣节)", "露娜","铃(游骑兵)",
-            "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮","琪爱儿","真阳(游骑兵)"
+            "克萝依", "碧(插班生)", "美美(万圣节)", "露娜", "铃(游骑兵)",
+            "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮", "琪爱儿", "真阳(游骑兵)"
         ],
         "other_normal_star3": [],
         "star2": [
@@ -56,16 +56,16 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["茜里(天使)"],
+        "up": ["镜华(万圣节)", "美美(万圣节)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "真步", "璃乃", "初音", "霞", "伊绪",
             "咲恋", "望", "妮诺", "秋乃", "镜华", "智", "真琴",
             "伊莉亚", "纯", "静流", "莫妮卡", "流夏", "吉塔",
             "亚里莎", "安", "古蕾娅", "空花(大江户)", "妮诺(大江户)",
-             "美美(万圣节)", "露娜","七七香(夏日)","克萝依", "碧(插班生)",
+            "美美(万圣节)", "露娜", "七七香(夏日)", "克萝依", "碧(插班生)",
             "伊莉亚(圣诞节)", "霞(魔法少女)", "优妮", "琪爱儿",
-            "铃(游骑兵)", "真阳(游骑兵)", "璃乃(奇境)", "祈梨","纯(夏日)"
+            "铃(游骑兵)", "真阳(游骑兵)", "璃乃(奇境)", "祈梨", "纯(夏日)"
         ],
         "other_normal_star3": [],
         "star2": [
@@ -83,7 +83,7 @@
         "up_prob": 7,
         "s3_prob": 25,
         "s2_prob": 180,
-        "up": ["凯留(夏日)"],
+        "up": ["珠希(夏日)"],
         "_comment": "star3 仅填3星常驻角色。不要填UP角，否则出率会偏高",
         "star3": [
             "杏奈", "璃乃", "镜华", "伊绪",
